# routers/api/upload.go
@@ -14,7 +14,7 @@ import (
 // @Param image formData file true "Image File"
 // @Success 200 {object} app.Response
 // @Failure 500 {object} app.Response
-// @Router /api/v1/tags/import [post]
+// @Router /upload [post]
 func UploadImage(c *gin.Context) {
 	appG := app.Gin{C: c}
 	file, image, e := c.Request.FormFile("images")
